# poc-multi-agent-system-adk

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run-locally.sh
consolidator_agent/: .env  Dockerfile  agent.py  pyproject.toml
consolidator_agent/.adk/: session.db
consolidator_agent/instructions/: agent.yaml
corrosion_agent/: .env  .env.example  Dockerfile  agent.py  pyproject.toml
corrosion_agent/.adk/: session.db
corrosion_agent/instructions/: agent.yaml
corrosion_agent/skills/evaluate-fluid-composition/: SKILL.md
corrosion_agent/skills/evaluate-fluid-composition/references/: evaluate-co2-content.md  evaluate-water-content.md
corrosion_agent/skills/evaluate-internal-inspection-tool-ili/: SKILL.md
mcp-server/: Dockerfile  app.py  data.json  pyproject.toml
mcp-server/.adk/: session.db
orchestrator_agent/: .env.example  Dockerfile  agent.py  pyproject.toml
orchestrator_agent/.adk/: session.db
orchestrator_agent/instructions/: agent.yaml
orchestrator_agent/instructions/.adk/: session.db
third_party_damage_agent/: Dockerfile  agent.py  pyproject.toml
third_party_damage_agent/.adk/: session.db
third_party_damage_agent/instructions/: agent.yaml
third_party_damage_agent/instructions/.adk/: session.db
third_party_damage_agent/skills/evaluate-activity-level/: SKILL.md
third_party_damage_agent/skills/evaluate-min-cover-depth/: SKILL.md
third_party_damage_agent/skills/probability-variables-orchestrator/: SKILL.md
